# doubleconeshooting

./: .clangd  .coverage  .gitignore  CMakeLists.txt  CMakeLists_vacuum_system.cmake  README.md  final_analysis.txt  requirements.txt  start_gui.sh  temp.cpp  wsl_build.sh  wsl_deploy.sh  wsl_setup.sh
.cache/clangd/index/: LTSMC.h.E2DA520C005A58BC.idx  auxiliary_support_device.cpp.4956525D3AB94571.idx  auxiliary_support_device.h.8DE043CDC27ECE62.idx  device_interface.cpp.2E4937BA89DE3361.idx  device_interface.cpp.ACABEE9E4197F538.idx  device_interface.h.C4D23B97BF032661.idx  device_interface.h.D2305878A69DE7F5.idx  encoder_acquisition.cpp.07ADF7DBF66F5EB8.idx  encoder_acquisition.cpp.D25495266F0920F8.idx  encoder_acquisition.h.6D732E651BBCEA9B.idx  encoder_acquisition.h.FFC701DD8C1FC624.idx  encoder_device.cpp.B7082D0110E3FEB0.idx  encoder_device.h.81E8C0E327C2A85D.idx  interlock_service.cpp.4063A900CF2298B6.idx  interlock_service.h.EC2DA5C2D9DBF93E.idx  json.hpp.520E77BFA8CEE887.idx  kinematics.cpp.BDCAD418CECB7B59.idx  kinematics.cpp.E7E8452293D7C6BC.idx  kinematics.h.2FFC7D3ACC36181A.idx  kinematics.h.B3AEBA418A87BAC9.idx  large_stroke_device.cpp.9DE274D29F1A5563.idx  large_stroke_device.h.273A47E835C66E48.idx  main_controller.cpp.C27DF25F5A005F2E.idx  main_controller.h.45FBD76F610F70A5.idx  motion_controller_device.cpp.28868AE18BBCFC0B.idx  motion_controller_device.h.563287CF917EF648.idx  mv_cu020_19gc.cpp.8B90CB1EBBE9F3E5.idx  mv_cu020_19gc.h.54DFDE7123D29A98.idx  plc_communication.cpp.80B197E0618574CC.idx  plc_communication.h.3ABAA23DE4E8F21E.idx  reflection_imaging_device.cpp.0FB144AB5F26A7F4.idx  (+14 more)
.cursor/plans/: gui-server-plc自动化测试方案_de79eab6.plan.md
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
config/: devices_config.json  system_config.json  vacuum_system_config.json
docs/: GUI电源控制接口说明.md  IO控制接口调用位置汇总.md  OPU-CA协议实现说明.md  smc_pvt_move_调用前必须设置项与调用顺序.md  代码更新实施状态.md  六自由度编码器位置保存功能说明.md  六自由度编码器读取说明.md  双锥项目测试数据收集.xlsx  实施完成总结.md  硬件配置更新说明_20251223.md  端到端测试底层实现原理详解.md  编译和测试指南.md  自动上电功能实施完成报告.md  项目说明.md
docs/api-reference/: motion_controller_device_analysis.md  six_dof_device_analysis.md
docs/接口定义/: 1200PLC真空系统集成DIDO点Tags.xlsx  large_stroke_device.md  反射光成像表征接口定义-v1.0.md  大行程接口定义.xlsx  真空系统操作全流程及配置规范.docx  真空集成1200PLCTags.xlsx  真空集成1200PLCTags_已过滤.md  真空集成1200PLCTags_已过滤.xlsx  背光成像表征接口定义-v1.0.md  背光成像表征接口定义-v1.0.xlsx
docs/真空系统资料/: CTS真空系统_通信表20251013.xlsx  真空系统操作与维护手册.md  真空系统操作与设备检查清单.md  真空系统现场快速操作卡.md  真空系统设备启停及放气检查清单.md
docs/系统需求及设计/: System_Architecture_Design.md  System_Requirements_Specification.md  运动安全联锁设计.md
docs/部署文件/: Tango Controls部署指南.md  tango环境如何运作.md
gui/: requirements.txt
gui/six_dof_debug_gui/: README.md  SixDofDebugGUI.spec  __init__.py  build_exe.bat  build_exe.py  config.json  config.py  main.py  main_window.py  requirements.txt  rthook_pyqt5.py  run_with_32bit.bat  部署要求.md
gui/vacuum_chamber_gui/: __init__.py  config.py  main.py  main_window.py  simulation_mode_manager.py  styles.py  test_blocking.py  utils.py
gui/vacuum_system_gui/: FIXES_SUMMARY.md  VacuumSystemGUI.spec  VacuumSystemGUI_Mock.spec  __init__.py  alarm_manager.py  build_exe.bat  build_exe.py  config.py  digital_twin_page.py  main_page.py  main_window.py  record_pages.py  requirements.txt  run_gui.py  run_gui_mock.py  styles.py  tango_worker.py  widgets.py
include/common/: device_interface.h  encoder_acquisition.h  kinematics.h  plc_communication.h  standard_system_device.h  system_config.h  tango_device_wrapper.h
include/device_services/: auxiliary_support_device.h  encoder_device.h  large_stroke_device.h  motion_controller_device.h  reflection_imaging_device.h  six_dof_device.h  vacuum_device.h  vacuum_plc_mapping.h  vacuum_system_device.h  vacuum_system_plc_mapping.h
include/drivers/: LTSMC.h  mv_cu020_19gc.h
include/integrated_control/: main_controller.h
include/nlohmann/: json.hpp
include/system_services/: interlock_service.h
scripts/: README.md  REMOVE_AUXILIARY_DEVICES.md  backup_project.py  check_auxiliary_server.py  check_device_status.py  check_mode.py  check_reflection_config.py  cleanup_auxiliary_devices.py  diagnose_power_control.py  find_auxiliary_server_config.sh  find_server_config.sh  fix_auxiliary_server_devices.py  fix_wsl_hosts.sh  image_stream_api.py  list_server_devices.py  register_devices.py  requirements_api.txt  run_opcua_plc_simulator.ps1  run_tests.bat  run_tests.sh  run_tests_with_reports.sh  setup_omniORB.sh  start_image_api.bat  start_image_api.sh  start_servers.py  start_servers_target_positioning.py  start_vacuum_system.sh  test_auto_power_on.py  test_encoder_collector_read.py  test_force_sensor_read.py  test_io_output.py  test_read_encoder.py  test_read_limits.py  test_save_encoder_positions.py  test_server_info.py  test_six_move_pose_relative.py  test_six_move_zero.py  test_six_reciprocating_motion.py  test_smc_capabilities  test_smc_capabilities.cpp  (+6 more)
scripts/tools/: README.md  _extract_smc608_pages.py  _probe_ltsmc_connect.py  _probe_ltsmc_connect_wsl.py  _scan_smc608_pdf.py  _selftest_modbus_tcp_sim.py  analyze_motion_controller_sim_log.py  convert_excel_to_md.py  convert_filtered_to_md.py  convert_word_to_md.py  dump_tango_db.py  filter_plc_tags.py  ltsmc_smoke_test_wsl.py  test_image_api.py  test_plc_communication.py  view_markdown.py
src/common/: device_interface.cpp  encoder_acquisition.cpp  kinematics.cpp  plc_communication.cpp  standard_system_device.cpp  system_config.cpp  system_config.h  tango_device_wrapper.cpp
src/device_services/: auxiliary_support_device.cpp  encoder_device.cpp  large_stroke_device.cpp  motion_controller_device.cpp  reflection_imaging_device.cpp  six_dof_device.cpp  six_dof_device.cpp.backup  vacuum_device.cpp  vacuum_system_device.cpp
src/drivers/: mv_cu020_19gc.cpp
src/integrated_control/: main_controller.cpp
src/system_services/: interlock_service.cpp
tools/motion_controller_simulator/: README.md  modbus_tcp_motion_controller_sim.py  sim_init.example.json
tools/opcua_plc_simulator/: self_test.py  vacuum_plc_simulator.py
(+24 files in other folders)
